--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -51,3 +51,9 @@ tbody {
 .todo-icon:hover {
   scale: 0.8;
 }
+.refresh {
+  width: 100px;
+  cursor: pointer;
+  border: 2px solid green;
+  border-radius: 10px;
+}
